--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-lg-6">
                         <h1 class="display-5 fw-bold lh-1 mb-3">
-                            Never Miss a meeting with our to do list
+                            Never Miss A Meeting With Our To Do List
                         </h1>
                         <p class="lead">
                             A simple, fast and scalable to do list that helps
@@ -119,7 +119,6 @@
                                 <ul id="list" class="list list-group"></ul>
                             </div>
                         </div>
-                        <h1 class="h1">TEST</h1>
                     </div>
                 </div>
             </div>
