--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>First Project</title>
+        <title>First Project v2</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -19,26 +19,12 @@
 
         <!-- Convert this to an external style sheet -->
         <link rel="stylesheet" href="css/site.css" />
-        <style>
-            body {
-                color: white;
-            }
-            #hero {
-                min-height: 100vh;
-                background: #141e30;
-                /* fallback for old browsers */
-                background: -webkit-linear-gradient(to right, #243b55, #141e30);
-                /* Chrome 10-25, Safari 5.1-6 */
-                background: linear-gradient(to right, #243b55, #141e30);
-                /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-            }
-        </style>
     </head>
 
     <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">ToDo List</a>
+                <a class="navbar-brand" href="#">ToDo</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -56,23 +42,24 @@
                             <a
                                 class="nav-link active"
                                 aria-current="page"
-                                href="#"
+                                href="index.html"
                                 >Home</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">The App</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Demo</a>
+                            <a class="nav-link" href="#">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <!-- ======= Hero Section ======= -->
         <main id="hero">
             <div class="container col-xxl-8 px-4 py-5">
